# slack-native

./: .#README.md  .gitignore  CMakeLists.txt  README.md
lib/include/libwebsockets/: lws_config.h
src/: main.c
src/gui/: event.h  eventhandler.c  eventhandler.h  gui.c  gui.h  mouse.c  mouse.h  style.h  text.c  text.h  unicode.c  unicode.h  unifont.h
src/gui/element/: button.c  button.h  label.c  label.h
src/gui/layout/: linear.c  linear.h  simple.c  simple.h  split.c  split.h
src/slacknet/: channels.c  channels.h  utils.c  utils.h
utils/: generate_unifont_h.sh
